--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	1cc5c406470802ce59b1e357bacf3336&libraries=services&autload=false"></script>
+    
   </head>
   <body>
     <noscript>
