--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   </title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 
 <body>
@@ -23,12 +24,3 @@
 </body>
 
 </html>
-
-<script>
-  (function () {
-    var tag = document.createElement("script");
-    tag.src = "https://www.youtube.com/iframe_api";
-    var firstScriptTag = document.getElementsByTagName("script")[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-  })();
-</script>
